# AnimeMangaDB-Platform-v3

./: .gitignore  CHANGELOG.md  ROADMAP.md  pyproject.toml  requirements.txt
docs/architecture/: DEPENDENCY_RULES.md  PLATFORM_V3_ARCHITECTURE.md
docs/architecture/database/: REPOSITORY_ARCHITECTURE_DECISIONS.md  REPOSITORY_LAYER_CERTIFICATION.md
docs/specifications/database/: INSTALLMENT_ENTITY_MAPPERS.md  INSTALLMENT_REPOSITORIES.md  MAPPING_STRATEGY.md  PERSISTENCE_STRATEGY.md  (+3 more)
docs/validation/: V0_2_0_ARCHITECTURE_DOCUMENTATION_VALIDATION.md  V0_3_0_DOMAIN_SPECIFICATION_VALIDATION.md  V0_4_1_DOMAIN_FOUNDATIONS_VALIDATION.md  V0_4_7_INSTALLMENT_ENTITIES_VALIDATION.md  V0_4_8_EPISODE_CHAPTER_MAPPING_VALIDATION.md  V0_4_9_DOMAIN_LAYER_CERTIFICATION.md  V0_5_1_DATABASE_FOUNDATION_VALIDATION.md  V0_5_5_ORM_PERSISTENCE_MODELS_VALIDATION.md  V0_5_7_MAPPING_STRATEGY_VALIDATION.md  V0_5_8A_TITLE_ENTITY_MAPPERS_VALIDATION.md  V0_5_8B_ENTITY_MAPPERS_VALIDATION.md  V0_5_9A_REPOSITORY_FOUNDATION_VALIDATION.md  V0_5_9B_TITLE_REPOSITORIES_VALIDATION.md  V0_5_9C_INSTALLMENT_REPOSITORIES_VALIDATION.md  V0_5_9D_REPOSITORY_CERTIFICATION_VALIDATION.md  V0_6_5_MAPPING_QUERY_SERVICES_VALIDATION.md  V0_6_6_TRANSACTION_BOUNDARY_VALIDATION.md  V0_6_7_APPLICATION_SERVICE_CERTIFICATION_VALIDATION.md  v0.5.10_database_certification_validation_log.md  v0.6.4-validation.md
src/animemangadb/: __init__.py
src/animemangadb.egg-info/: SOURCES.txt
tests/unit/: test_domain_imports.py  test_domain_specification_docs.py  test_installment_identifier.py  test_package_boundaries.py  test_platform.py
(+115 files in other folders)
